--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,88 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
+<!-- <div id="home"> -->
+<header>
+  <!--Navbar -->
+  <nav class="black lighten-2">
+    <div class="container">
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">My Closet</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <!-- Modal Trigger -->
+          <a class="waves-effect waves-light btn yellow darken-2 modal-trigger" href="#modal1">Log In</a>                        
         </ul>
       </div>
     </div>
+  </nav> 
+  <!-- Log in Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Log in</h4>
+      <div class="row">
+        <div class="input-field col s6">
+          <input placeholder="Placeholder" id="user_name" type="text" class="validate">
+          <label for="user_name">USERNAME</label>
+        </div>
+        <div class="input-field col s6">
+          <input placeholder="Placeholder" id="password" type="text" class="validate">
+          <label for="password">PASSWORD</label>
+        </div>
+      </div>    
+    </div>
+    <div class="modal-footer">
+        <button class=" modal-close btn waves-effect waves-yellow darken-2 btn-flat" type="submit" name="action">
+          <a href="#" class="modal-close waves-effect waves-yellow darken-2 btn-flat">Log in</a>  
+        </button>
+    </div>
+  </div>                  
+</header>
+<main>
+  <div class="parallax-container center valign-wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 white-text">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <h1 class="white-text overlay center-align">WELCOME MY CLOSET</h1> 
+          <a class="waves-effect waves-light btn-large yellow darken-2 lighten-2"><i class="material-icons">search</i></a> 
+          <a class="waves-effect waves-light btn-large yellow darken-2 lighten-2" >Add Item</a> 
+        </div>
+      </div> 
+    </div>
+    <div class="parallax">
+      <img src="closet.jpeg" class="responsive-img">
+    </div>
   </div>
-</div>
-
+</main>
+<!-- Footer -->
+<footer class="page-footer black lighten-2">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12"></div>
+      <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container center-align">
+    © 2019 Copyright  My Closet - All Rights Reserved 
+    </div>
+  </div>
+</footer>
+<!-- Library Links -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="/js/index.js"></script>
