--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -59,7 +59,7 @@
               <div class="row">
                 <div class="input-field col s6">
                   <div class="input-field col s12">
-                    <select>
+                    <select class="user-input" id="q1">
                       <option value="" disabled selected>Size</option>
                       <option value="small">small</option>
                       <option value="medium">medium</option>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="input-field col s6">
                   <div class="input-field col s12">
-                    <select>
+                    <select class="user-input" id="q2">
                       <option value="" disabled selected>Color</option>
                       <option value="red">Red</option>
                       <option value="black">Black</option>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="input-field col s6">
                   <div class="input-field col s12">
-                    <select>
+                    <select class="user-input" id="q3">
                       <option value="" disabled selected>Type</option>
                       <option value="short-sleeve">short-sleeve</option>
                       <option value="long-sleeve">long-sleeve</option>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="input-field col s6">
                   <div class="input-field col s12">
-                    <select>
+                    <select class="user-input" id="q4">
                       <option value="" disabled selected>Condition</option>
                       <option value="new">new</option>
                       <option value="used">used</option>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="input-field col s6">
                   <div class="input-field col s12">
-                    <select multiple>
+                    <select class="user-input" id="q5" multiple>
                       <option value="" disabled selected>Suitable for:</option>
                       <option value="gender-n">Gender Neutral</option>
                       <option value="female">Female</option>
@@ -108,12 +108,13 @@
                 </div>
                 <div class="input-field col s6">
                   <div class="input-field col s12">
-                    <input placeholder="$5.00" id="shirt-price" type="text" class="validate">
+                    <input class="user-input" placeholder="$5.00" id="shirt-price" type="text" class="validate">
                     <label for="shirt-price" id="shirt-price-label">Price</label>
                   </div>
                 </div>
                 <div class="input-field col s12">
                   <div class="input-field col s12">
+
                     <form action="#">
                       <div class="file-field input-field">
                         <div class="waves-effect waves-light btn yellow darken-2">
@@ -125,11 +126,12 @@
                         </div>
                       </div>
                     </form>
+                    
                   </div>
                 </div>
                 <div class="input-field col s12">
                   <div class="input-field col s12">
-                    <button class="waves-effect waves-light btn yellow darken-2 modal-close">Submit</button>
+                    <button class="waves-effect waves-light btn yellow darken-2 modal-close" id="submit">Submit</button>
                   </div>
                 </div>
               </div>
