finding image path

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -122,11 +122,11 @@
                           <input type="file" multiple>
                         </div>
                         <div class="file-path-wrapper">
-                          <input class="file-path validate" type="text" placeholder="Upload a photo of your item">
+                          <input id="user-file-path" class="file-path validate" type="text" placeholder="Upload a photo of your item">
                         </div>
                       </div>
                     </form>
-                    
+
                   </div>
                 </div>
                 <div class="input-field col s12">
