added additional columns to include gender clothing option and file path of image upload

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -98,7 +98,7 @@
                 </div>
                 <div class="input-field col s6">
                   <div class="input-field col s12">
-                    <select class="user-input" id="q5" multiple>
+                    <select class="user-input" id="q5">
                       <option value="" disabled selected>Suitable for:</option>
                       <option value="gender-n">Gender Neutral</option>
                       <option value="female">Female</option>
