--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,6 +37,9 @@
   </div>
 </header>
 <main>
+  <div id="userItems">
+
+  </div>
   <div class="parallax-container center valign-wrapper">
     <div class="container">
       <div class="row">
