--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,38 @@
   <nav class="black lighten-2">
     <div class="container">
       <div class="nav-wrapper">
+
+                          {{!-- This is test Search --}}
+<ul id="slide-out" class="sidenav">
+      <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+          <li>
+            <a class="collapsible-header">Search<i class="material-icons">arrow_drop_down</i></a>
+            <div class="collapsible-body">
+              <ul>
+                <li><a href="#!">Shirt</a></li>
+                <li><a href="#!">Pants</a></li>
+                <li><a href="#!">Dress</a></li>
+                <li><a href="#!">Shoes</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="right hide-on-med-and-down">
+      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Search<i class="material-icons right">arrow_drop_down</i></a></li>
+      <ul id='dropdown1' class='dropdown-content'>
+        <li><a href="#!">Shirt</a></li>
+        <li><a href="#!">Pants</a></li>
+        <li><a href="#!">Dress</a></li>
+        <li><a href="#!">Shoes</a></li>
+      </ul>
+    </ul>
+    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>  
+    {{!-- End of test Search --}}
+
+
         <a href="#" class="brand-logo">My Closet</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Home</a></li>
@@ -49,8 +81,6 @@
           <br>
           <br>
           <h1 class="white-text overlay center-align">WELCOME MY CLOSET</h1>
-          <a class="waves-effect waves-light btn-large yellow darken-2 lighten-2"><i
-              class="material-icons">search</i></a>
           <a class="waves-effect waves-light btn-large yellow darken-2 lighten-2 modal-trigger"
             href="#add-item-modal">Add Item</a>
           <div id="add-item-modal" class="modal">
