addition of asset folder

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
   <nav class="black lighten-2">
     <div class="container">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo">My Closet</a>
+        <a href="#" class="brand-logo"><i class="fas fa-tshirt"></i>My Closet</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="#">Home</a></li>
           <li><a href="#">Services</a></li>
@@ -48,14 +48,14 @@
           <br>
           <br>
           <br>
-          <h1 class="white-text overlay center-align">WELCOME MY CLOSET</h1> 
+          <h1 class="white-text overlay center-align">WELCOME TO MY CLOSET</h1> 
           <a class="waves-effect waves-light btn-large yellow darken-2 lighten-2"><i class="material-icons">search</i></a> 
           <a class="waves-effect waves-light btn-large yellow darken-2 lighten-2" >Add Item</a> 
         </div>
       </div> 
     </div>
     <div class="parallax">
-      <img src="closet.jpeg" class="responsive-img">
+      <img src="/assets/images/closet.jpeg" class="responsive-img">
     </div>
   </div>
 </main>
