closet photo to public file, side navbar for full screen and mobile

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,7 +24,7 @@
       </li>
     </ul>
     <ul class="right hide-on-med-and-down">
-      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Search<i class="material-icons right">arrow_drop_down</i></a></li>
+      <li><a class="sidenav-trigger show-on-large" href="#!" data-target="slide-out"><i class="material-icons right">menu</i></a></li>
       <ul id='dropdown1' class='dropdown-content'>
         <li><a href="#!">Shirt</a></li>
         <li><a href="#!">Pants</a></li>
