discarding old edits

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
   </div>
 </header>
 <main>
-  <div id="userItems">
+  <div id="userItemDisplay">
 
   </div>
   <div class="parallax-container center valign-wrapper">
