--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,7 +49,7 @@
           <br>
           <br>
           <h1 class="white-text overlay center-align">WELCOME MY CLOSET</h1>
-          <a class="waves-effect waves-light btn-large yellow darken-2 lighten-2" href="#add-item-modal"><i
+          <a class="waves-effect waves-light btn-large yellow darken-2 lighten-2" href="userhome"><i
               class="material-icons">search</i></a>
           <a class="waves-effect waves-light btn-large yellow darken-2 lighten-2 modal-trigger"
             href="#add-item-modal">Add Item</a>
