update all code included

--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -13,6 +13,27 @@
                                     <ul>
                                         <li>
                                         <a href="#!">Shirt</a>
+                                        <ul class="collapsible collapsible-accordion">
+                            <li>
+                                <a class="collapsible-header">Search<i class="material-icons">arrow_drop_down</i></a>
+                                <div class="collapsible-body">
+                                    <ul>
+                                        <li>
+                                        <a href="#!">Shirt</a>
+                                        </li>
+                                        <li>
+                                        <a href="#!">Pants</a>
+                                        </li>
+                                        <li>
+                                        <a href="#!">Dress</a>
+                                        </li>
+                                        <li>
+                                        <a href="#!">Shoes</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                        </ul>
                                         </li>
                                         <li>
                                         <a href="#!">Pants</a>
