user-name request input added

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -28,6 +28,10 @@ h1 {
   font-size: 1.5em;
 }
 
+#user-name {
+  width: 50%;
+  text-align: center;
+}
 #submit-msg {
   margin-top: 10px;
   color: black;
