--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -56,6 +56,8 @@
           <div id="add-item-modal" class="modal">
             <div class="modal-content">
     <h4>Add An Item</h4>
+<input placeholder="Enter Your Name Here" id="user-name" type="text">
+
     <ul class="collapsible">
     <li>
       <div class="collapsible-header">Shirt</div>
