working side search bar on userhome

--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -6,44 +6,126 @@
                 {{! This is test Search }}
                 <ul id="slide-out" class="sidenav">
                     <li class="no-padding">
-                        <ul class="collapsible collapsible-accordion">
+                        <ul class="collapsible">
                             <li>
-                                <a class="collapsible-header">Search<i class="material-icons">arrow_drop_down</i></a>
+                                <a class="collapsible-header yellow darken-2">SEARCH BY CATEGORY<i class="material-icons">arrow_drop_down</i></a>
                                 <div class="collapsible-body">
                                     <ul>
                                         <li>
-                                        <a href="#!">Shirt</a>
-                                        <ul class="collapsible collapsible-accordion">
-                            <li>
-                                <a class="collapsible-header">Search<i class="material-icons">arrow_drop_down</i></a>
-                                <div class="collapsible-body">
-                                    <ul>
-                                        <li>
-                                        <a href="#!">Shirt</a>
-                                        </li>
-                                        <li>
-                                        <a href="#!">Pants</a>
-                                        </li>
-                                        <li>
-                                        <a href="#!">Dress</a>
-                                        </li>
-                                        <li>
-                                        <a href="#!">Shoes</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
-                                        </li>
-                                        <li>
-                                        <a href="#!">Pants</a>
-                                        </li>
-                                        <li>
-                                        <a href="#!">Dress</a>
-                                        </li>
-                                        <li>
-                                        <a href="#!">Shoes</a>
-                                        </li>
+                                        <ul class="collapsible">
+                                            <li>
+                                                <a class="collapsible-header">Shirts<i class="material-icons right">arrow_drop_down</i></a>
+                                                <div class="collapsible-body">
+                                                    <ul class="collapsible">
+                                                        <li>
+                                                            <a class="collapsible-header">&emsp;Mens<i class="material-icons right">arrow_drop_down</i></a>
+                                                            <div class="collapsible-body">
+                                                                <ul>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Short Sleeve</a>
+                                                                    </li>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Long Sleeve</a>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </li>                                               
+                                                        <li>
+                                                            <a class="collapsible-header">&emsp;Womens<i class="material-icons right">arrow_drop_down</i></a>
+                                                            <div class="collapsible-body">
+                                                                <ul>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Short Sleeve</a>
+                                                                    </li>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Long Sleeve</a>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </li>  
+                                            <li>
+                                                <a class="collapsible-header">Pants<i class="material-icons right">arrow_drop_down</i></a>
+                                                <div class="collapsible-body">
+                                                    <ul class="collapsible">
+                                                        <li>
+                                                            <a class="collapsible-header">&emsp;Mens<i class="material-icons right">arrow_drop_down</i></a>
+                                                            <div class="collapsible-body">
+                                                                <ul>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Formal</a>
+                                                                    </li>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Casual</a>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </li>                            
+                                                        <li>
+                                                            <a class="collapsible-header">&emsp;Womens<i class="material-icons right">arrow_drop_down</i></a>
+                                                            <div class="collapsible-body">
+                                                                <ul>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Formal</a>
+                                                                    </li>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Casual</a>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <a class="collapsible-header">Dress<i class="material-icons right">arrow_drop_down</i></a>
+                                                <div class="collapsible-body">
+                                                    <ul class="collapsible">
+                                                        <li>
+                                                        <a href="#!">&emsp;Dress</a>
+                                                        </li>
+                                                        <li>
+                                                        <a href="#!">&emsp;Skirt</a>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <a class="collapsible-header">Shoes<i class="material-icons right">arrow_drop_down</i></a>
+                                                <div class="collapsible-body">
+                                                    <ul class="collapsible">
+                                                        <li>
+                                                            <a class="collapsible-header">&emsp;Mens<i class="material-icons right">arrow_drop_down</i></a>
+                                                            <div class="collapsible-body">
+                                                                <ul>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Formal</a>
+                                                                    </li>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Casual</a>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </li>
+                                                        <li>
+                                                            <a class="collapsible-header">&emsp;Womens<i class="material-icons right">arrow_drop_down</i></a>
+                                                            <div class="collapsible-body">
+                                                                <ul>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Formal</a>
+                                                                    </li>
+                                                                    <li>
+                                                                    <a href="#!">&emsp;&emsp;Casual</a>
+                                                                    </li>
+                                                                </ul>
+                                                            </div>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </li>
+                                        </ul>
                                     </ul>
                                 </div>
                             </li>
